<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    android:background="@drawable/baground">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:background="@drawable/baground">

        <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PEMESANAN BUKU"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:background="#ffccff"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Silahkan diisi: "
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textAlignment="center"
            android:inputType="textCapWords"
            android:background="#ffffff"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LIST BUKU"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:background="#9494b8"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/satubukucheckbox"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="@string/whipped_cream"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/duabuku_checkbox"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="@string/chocolate"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/tigabuku_checkbox"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="Sweet And Yummy"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/empatbuku_checkbox"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="Cake From My Kitchen"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/limabuku_checkbox"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="UKM Jaman Now"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/enambuku_checkbox"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="Serba Serbi Baking"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/tujuhbuku_checkbox"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="Cara Dahsyat Belajar Bisnis"
            android:textSize="20sp" />
        <CheckBox
            android:id="@+id/delapanbuku_checkbox"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="The King Of Property"
            android:textSize="20sp" />
        <CheckBox
            android:id="@+id/Sembilanbuku_checkbox"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="The Alibaba Way"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/sepuluhbuku_checkbox"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="#66ffffff"
            android:paddingLeft="16dp"
            android:text="Cara Dahsyat Belajar Bisnis"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:background="#9494b8"
            android:textSize="20sp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/minus"
                android:layout_marginStart="130dp"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="1"
                android:background="#66ffffff"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textSize="20dp"
            android:layout_marginBottom="150dp"
            android:layout_marginStart="140dp"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>

